# dspy-lora-agent

./: .gitignore  README.md  deploy_hf_endpoint.py  deploy_ollama_endpoint.py  dpsy_test.ipynb  hotpotqa_agent.py  pyproject.toml
0.get_training_samples/: collect_training_samples.ipynb  collect_training_samples_concurrent.py  understand_training_data.ipynb
1.llm_lora/: README.md  modal_hotpotqa_sft.py
2.compare_accuracy/: eval_llms.ipynb
