[project]
name            = "cf-compound-selection-backend"
version         = "0.1.0"
description     = "Backend for cardiac fibrosis compound selection system."
readme          = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dspy==3.0.0",
    "httpx",
    "python-dotenv",
]

[build-system]
requires      = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.ruff]
exclude = []

[tool.ruff.per-file-ignores]
"agentic_system/agents/*.py" = ["E402"]